[package]
name = "deduplicator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parquet = "50.0"
arrow = "50.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
cityhasher = "0.1"
regex = "1.10"
similar = { version = "2.4", features = ["inline"] }
console = "0.15"
glob = "0.3"
env_logger = "0.11.3"
log = "0.4.21"
threadpool = "1.8"
speedy = "0.8"
lazy_static = "1.4"
arrow-array = "50.0"
zstd = "0.13"
globwalk = "0.9"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
md5 = "0.7"
indicatif = "0.17"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# ndarray = "0.15"

[profile.release]
debug = true
